# hashbench

./: .gitmodules  CMakeLists.txt  README.md  README.txt  bloomfilter.cpp  cht_overflow.hpp  defs.hpp  demangled_type.hpp  experiment_base.hpp  fingerprint.cpp  linear_scaling.cpp  linear_scaling.h  microbench.cpp  randomcopy.cpp  remote.txt  reservecopy.cpp  test_overflow.cpp
scripts/: eval_bloomfilter.sh  eval_fingerprint.sh  eval_randomcopy.sh  eval_reservedcopy.sh  microbench.sh  new_eval_randomcopy.sh  readjson.sh  resize_csv_stats.py  resize_stats.py  resize_stats.sh  run.sh
